Compress POST body and encode it correctly. Factor out magic strings.